Fixing bug #132994: We come to bury Pluto, not praise him.

We have already been deriving Pluto from the KSAsteroid class 
for practical reasons.  With this change, Pluto is now labeled 
an "asteroid" in the details dialog.  

BUG: 132994
CCMAIL: kstars-devel@kde.org


svn path=/trunk/KDE/kdeedu/kstars/; revision=762902